--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<canvas id="glcanvas" tabindex='1'></canvas>
 	<script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
-	<script>load(my-gemu.wasm);</script>
+	<script>load(my-gamu.wasm);</script>
 
 </body>
 </html>
